# OpenChaosTD

./: CMakeLists.txt  README.md  VFX_PLAN.md  changes_improve-hud-to-buggy-state.txt  role-context-you-crispy-stearns.md
assets/data/: enemies.json  towers.json
assets/raw/: openchaosdefender.aseprite
cmake/: embed_resource.cmake
config/: fonts.toml  keybindings.json  particle_effects.json  settings.json  settings.toml  waves.json
data/: config.json  enemies.json  enemies.md  enemies.toml  gameplay.json  gameplay.toml  keybindings.json  particle_effects.json  particle_effects.toml  tower_vfx.json  towers.json  towers.md  towers.toml  waves.json  waves.md  waves.toml
datapacks/default/: pack.toml
datapacks/default/data/: enemies.toml  gameplay.toml  particle_effects.toml  towers.toml  waves.toml
datapacks/default/maps/Intersection/: map.toml
datapacks/default/maps/default/: map.toml
datapacks/default/maps/test/: map.toml
datapacks/default/resources/raw/: openchaosdefender.aseprite
docs/: container_usage_audit.md  enemies.md  towers.md  waves.md
resources/raw/: openchaosdefender.aseprite  openchaostd_main.ceol
src/: game.cpp  game.hpp  game_config.cpp  game_config.hpp
src/core/: CORE.md  asset_manager.cpp  asset_manager.hpp  button.hpp  game_config.cpp  game_config.hpp  input_manager.cpp  input_manager.hpp  jsonio.cpp  particle_system.cpp  particle_system.hpp  renderer.cpp  renderer.hpp
src/datapack/: datapack.hpp  datapack_registry.cpp  datapack_registry.hpp
src/engine/: engine.md
src/engine/core/: assets.cpp  assets.hpp  draw_helpers.hpp  font_config.cpp  font_config.hpp  input.cpp  input.hpp  letterbox.cpp  letterbox.hpp  resources.cpp  resources.hpp  screen.cpp  screen.hpp  text.cpp  text.hpp  text_renderer.cpp  text_renderer.hpp
src/engine/features/: particle_system.cpp  particle_system.hpp  sound_system.cpp  sound_system.hpp  ui_widgets.cpp  ui_widgets.hpp
src/engine/lib/: dense_slotmap.hpp  grid2d.hpp  object_pool.hpp
src/engine/ui/: hud.cpp  hud.hpp  ui_util.cpp  ui_util.hpp
src/engine/util/: compact_float.hpp  file_store.cpp  file_store.hpp  json_store.cpp  json_store.hpp  profiler.cpp  profiler.hpp
src/factory/: emitter_presets.cpp  emitter_presets.hpp  enemy_factory.cpp  enemy_factory.hpp  module_registry.hpp  tower_factory.cpp  tower_factory.hpp
src/hud/: button_list.cpp  button_list.hpp  event_hud.cpp  event_hud.hpp  event_log.cpp  event_log.hpp  hud.cpp  hud.hpp  hud_draw.cpp  hud_draw.hpp  hud_theme.hpp  hud_views.hpp  pause_hud.cpp  pause_hud.hpp  score_hud.cpp  score_hud.hpp  status_hud.cpp  status_hud.hpp  tower_build_hud.cpp  tower_build_hud.hpp  tower_hud.cpp  tower_hud.hpp  tower_info_hud.cpp  tower_info_hud.hpp  wave_enemy_card.cpp  wave_enemy_card.hpp  wave_hud.cpp  wave_hud.hpp
src/states/: datapack_select_state.cpp  datapack_select_state.hpp  editor_select_state.cpp  editor_select_state.hpp  end_state.cpp  end_state.hpp  game_over_state.cpp  game_over_state.hpp  game_state.hpp  map_editor_state.cpp  map_editor_state.hpp  map_select_state.cpp  map_select_state.hpp  menu_state.cpp  menu_state.hpp  particle_editor_state.cpp  particle_editor_state.hpp  play_state.cpp  play_state.hpp  settings_state.cpp  settings_state.hpp  state_ui_helpers.hpp
src/systems/: enemy_system.cpp  enemy_system.hpp  particle_system.cpp  particle_system.hpp  pathfinder.cpp  pathfinder.hpp  render_system.cpp  render_system.hpp  tower_system.cpp  tower_system.hpp  wave_manager.cpp  wave_manager.hpp  world_system.cpp  world_system.hpp
src/world/: attack.hpp  attack_style.hpp  desc_line.hpp  effect.hpp  enemy.hpp  enemy_module.hpp  enemy_modules.cpp  enemy_modules.hpp  enemy_presentation.hpp  enemy_stats.hpp  enemy_upgrade.hpp  enemy_visual.hpp  game_data.cpp  game_data.hpp  game_paths.hpp  map.cpp  map.hpp  map_generator.cpp  map_generator.hpp  map_serialization.cpp  map_serialization.hpp  module_def.hpp  particle.hpp  save_serialization.cpp  save_serialization.hpp  stat_module.hpp  tile.hpp  tower.hpp  tower_modules.cpp  tower_modules.hpp  tower_presentation.hpp  tower_stats.hpp  tower_upgrade.hpp  tower_vfx.hpp  tower_visual.hpp  upgrade_shared.hpp  vfx_effect.hpp
tools/: aseprite_export_slices.sh  minshell.html  text_demo.cpp
